Add patch from upstream to make the setsid() that addresses CVE-2017-5226 optional
It breaks interactive shells. Users of bubblewrap to confine untrusted
programs should either add --new-session to the bwrap command line, or
prevent the TIOCSTI ioctl with a seccomp filter instead (as Flatpak does).

d/control: add Breaks on versions of Flatpak that did not
load the necessary seccomp filter to prevent CVE-2017-5226.

--- a/debian/control
+++ b/debian/control
@@ -25,6 +25,8 @@ Multi-arch: foreign
 Depends:
  ${misc:Depends},
  ${shlibs:Depends},
+Breaks:
+ flatpak (<< 0.8.0-2~),
 Description: setuid wrapper for unprivileged chroot and namespace manipulation
  Core execution engine for unprivileged containers that works as a setuid
  binary on kernels without user namespaces.
